--- a/README
+++ b/README
@@ -39,6 +39,6 @@
 
  "Mondaux" is pronounced like "monday".  Bad faux-french.
 
- As for "m.grl", think "riot grrl" or "perl grrl".  Only its
+ As for "m.grl", think "riot grrl" or "perl grrl".  Only it's
  javascript instead.
 .
